prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  labels:
    name: production
spec:
  replicas: 2
  minReadySeconds: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-pod
      labels:
        type: front-node
        app: nginx-app
    spec:
      volumes:
        - name: volume
          hostPath:
            path: /opt/www
      containers:
        - name: nginx-container
          image: nginx:1.21.1
          volumeMounts:
            - name: volume
              mountPath: /usr/share/nginx/html          
          resources:
            requests:
              memory: 300Mi
              cpu: 500m
            limits:
              memory: 600Mi
              cpu: 800m
      #Na tolerations:
      #Na   - effect: "NoSchedule"
      #Na     key: "mysize"
      #Na     operator: "Equal"
      #Na     value: "large"
