prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfirstservice
  labels:
    version: v2
spec:
  ports:
      port: 9000
      targetPort: 80
  selector:
     type: front-node
